--- a/MTT/public/style.css
+++ b/MTT/public/style.css
@@ -1,3 +1,45 @@
+@font-face {
+    font-family: 'PP Neue Montreal';
+    src: url('../assets/OTF/PPNeueMontreal-Bold.otf');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PP Neue Montreal';
+    src: url('../assets/OTF/PPNeueMontreal-Book.otf');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PP Neue Montreal';
+    src: url('../assets/OTF/PPNeueMontreal-Italic.otf');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'PP Neue Montreal';
+    src: url('../assets/OTF/PPNeueMontreal-Medium.otf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PP Neue Montreal';
+    src: url('../assets/OTF/PPNeueMontreal-SemiBold.otf');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PP Neue Montreal';
+    src: url('../assets/OTF/PPNeueMontreal-Thin.otf');
+    font-weight: 300;
+    font-style: normal;
+}
+
 * {
     padding: 0;
     margin: 0;
