fix/refac: fix and refactor autoscrolling banner component

--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,8 @@
   font-style: normal;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-track-color: transparent;
+  scrollbar-face-color: gray transparent;
+}
