--- a/src/output.css
+++ b/src/output.css
@@ -554,31 +554,24 @@ video {
   display: none;
 }
 
-.visible {
-  visibility: visible;
+.relative {
+  position: relative;
 }
 
 .m-auto {
   margin: auto;
 }
 
-.line-clamp-2 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-}
-
-.block {
-  display: block;
-}
-
-.inline {
-  display: inline;
+.box-border {
+  box-sizing: border-box;
 }
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .aspect-banner {
@@ -597,13 +590,18 @@ video {
   height: 1.25rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-min {
+  height: -moz-min-content;
+  height: min-content;
 }
 
 .w-fit {
@@ -619,20 +617,20 @@ video {
   min-width: 6rem;
 }
 
-.max-w-28 {
-  max-width: 7rem;
-}
-
 .max-w-7xl {
   max-width: 80rem;
 }
 
-.max-w-7 {
-  max-width: 1.75rem;
+.max-w-full {
+  max-width: 100%;
 }
 
 .shrink-0 {
   flex-shrink: 0;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .snap-x {
@@ -647,20 +645,20 @@ video {
   scroll-snap-align: start;
 }
 
-.snap-center {
-  scroll-snap-align: center;
-}
-
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
   align-items: center;
 }
 
-.justify-center {
-  justify-content: center;
+.justify-between {
+  justify-content: space-between;
 }
 
 .gap-2 {
@@ -671,25 +669,52 @@ video {
   gap: 0.75rem;
 }
 
-.overflow-y-clip {
-  overflow-y: clip;
+.gap-4 {
+  gap: 1rem;
 }
 
-.overflow-y-scroll {
-  overflow-y: scroll;
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.rounded-cxs {
+  border-radius: 0.2rem;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
 }
 
-.border-\[1px\] {
-  border-width: 1px;
+.border-2 {
+  border-width: 2px;
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+.border-transparent {
+  border-color: transparent;
+}
+
+.bg-darkgray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
+}
+
+.bg-lavender {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 235 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-offblack {
@@ -697,18 +722,23 @@ video {
   background-color: rgb(25 19 8 / var(--tw-bg-opacity, 1));
 }
 
-.bg-white {
+.bg-purple {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(151 71 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-darkpurple {
-  background-image: radial-gradient(at center, rgba(151,71,255,0.5) 0%, rgba(151,71,255,0) 56%);
+  background-image: radial-gradient(at center, rgba(151,71,255,0.6) 0%, rgba(151,71,255,0) 60%);
 }
 
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-6 {
@@ -721,13 +751,27 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pb-3 {
   padding-bottom: 0.75rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .font-heading {
@@ -753,6 +797,10 @@ video {
   line-height: 1rem;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -769,6 +817,10 @@ video {
   line-height: 1.375;
 }
 
+.leading-tight {
+  line-height: 1.25;
+}
+
 .text-offblack {
   --tw-text-opacity: 1;
   color: rgb(25 19 8 / var(--tw-text-opacity, 1));
@@ -777,6 +829,50 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 @font-face {
@@ -829,11 +925,82 @@ video {
   font-style: normal;
 }
 
-@media (min-width: 1280px) {
-  .xl\:h-10 {
-    height: 2.5rem;
-  }
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
+.hover\:-translate-y-0\.5:hover {
+  --tw-translate-y: -0.125rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:-translate-y-2:hover {
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.hover\:bg-lightgray:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(92 92 92 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-pink:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(223 199 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-\[\#A261FF\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(162 97 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-darkpurple:hover {
+  background-image: radial-gradient(at center, rgba(151,71,255,0.6) 0%, rgba(151,71,255,0) 60%);
+}
+
+.hover\:shadow-darkpurple\/40:hover {
+  --tw-shadow-color: rgb(151 71 255 / 0.4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.focus\:outline:focus {
+  outline-style: solid;
+}
+
+.focus\:outline-purple:focus {
+  outline-color: #9747FF;
+}
+
+.has-\[\:checked\]\:bg-purple:has(:checked) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(151 71 255 / var(--tw-bg-opacity, 1));
+}
+
+.has-\[\:checked\]\:font-medium:has(:checked) {
+  font-weight: 500;
+}
+
+.has-\[\:checked\]\:text-white:has(:checked) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.hover\:has-\[\:checked\]\:bg-pink:has(:checked):hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(223 199 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:has-\[\:checked\]\:text-offblack:has(:checked):hover {
+  --tw-text-opacity: 1;
+  color: rgb(25 19 8 / var(--tw-text-opacity, 1));
+}
+
+@media (min-width: 1280px) {
   .xl\:h-20 {
     height: 5rem;
   }
@@ -844,10 +1011,6 @@ video {
 
   .xl\:min-w-44 {
     min-width: 11rem;
-  }
-
-  .xl\:max-w-48 {
-    max-width: 12rem;
   }
 
   .xl\:gap-5 {
@@ -864,13 +1027,18 @@ video {
     padding-bottom: 1.5rem;
   }
 
-  .xl\:pb-5 {
-    padding-bottom: 1.25rem;
+  .xl\:pb-6 {
+    padding-bottom: 1.5rem;
   }
 
   .xl\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .xl\:text-sm {
@@ -880,8 +1048,26 @@ video {
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:max-w-7xl {
+    max-width: 80rem;
+  }
+
   .\32xl\:rounded-md {
     border-radius: 0.375rem;
   }
-}
 
+  .\32xl\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .\32xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .\32xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
