--- a/src/output.css
+++ b/src/output.css
@@ -562,6 +562,10 @@ video {
   margin: auto;
 }
 
+.-m-2\.5 {
+  margin: -0.625rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -661,6 +665,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -669,16 +677,24 @@ video {
   gap: 0.75rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
+.overflow-visible {
+  overflow: visible;
+}
+
+.overflow-scroll {
+  overflow: scroll;
+}
+
 .overflow-y-hidden {
   overflow-y: hidden;
+}
+
+.overflow-y-visible {
+  overflow-y: visible;
 }
 
 .overflow-x-scroll {
@@ -731,6 +747,11 @@ video {
   background-image: radial-gradient(at center, rgba(151,71,255,0.6) 0%, rgba(151,71,255,0) 60%);
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -761,9 +782,24 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
 }
 
 .pb-3 {
@@ -795,6 +831,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-medium {
@@ -929,6 +970,10 @@ video {
   display: none;
 }
 
+.hover\:absolute:hover {
+  position: absolute;
+}
+
 .hover\:-translate-y-0\.5:hover {
   --tw-translate-y: -0.125rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -944,6 +989,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
+.hover\:bg-\[\#A261FF\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(162 97 255 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-lightgray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(92 92 92 / var(--tw-bg-opacity, 1));
@@ -952,15 +1002,6 @@ video {
 .hover\:bg-pink:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(223 199 255 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-\[\#A261FF\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(162 97 255 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-darkpurple:hover {
-  background-image: radial-gradient(at center, rgba(151,71,255,0.6) 0%, rgba(151,71,255,0) 60%);
 }
 
 .hover\:shadow-darkpurple\/40:hover {
@@ -1000,6 +1041,25 @@ video {
   color: rgb(25 19 8 / var(--tw-text-opacity, 1));
 }
 
+@media (min-width: 1024px) {
+  .lg\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .lg\:overflow-hidden {
+    overflow: hidden;
+  }
+
+  .lg\:overflow-x-hidden {
+    overflow-x: hidden;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
 @media (min-width: 1280px) {
   .xl\:h-20 {
     height: 5rem;
@@ -1017,6 +1077,10 @@ video {
     gap: 1.25rem;
   }
 
+  .xl\:gap-3 {
+    gap: 0.75rem;
+  }
+
   .xl\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -1025,6 +1089,26 @@ video {
   .xl\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+  }
+
+  .xl\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .xl\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .xl\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .xl\:py-2\.5 {
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
   }
 
   .xl\:pb-6 {
@@ -1044,6 +1128,11 @@ video {
   .xl\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
